FIRSTLANGUAGEAFTERBOOTSTRAP/parser/ScalaLR.output
Terminals unused in grammar

    NUM
    COMMENT
    LEXICALERROR
    "{"
    "}"
    NL
    "%type"


Grammar

    0 $accept: command $end

    1 command: Notation

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    3 OptInclude: "%empty"
    4           | "%include" CODE

    5 Tokens: ε
    6       | TokenSpec Tokens

    7 TokenSpec: "%left" TypedTerminals
    8          | "%right" TypedTerminals
    9          | "%non" TypedTerminals
   10          | "%token" TypedTerminals

   11 TypedTerminals: TypedTerminal
   12               | TypedTerminal TypedTerminals

   13 TypedTerminal: ID ":" Type
   14              | ID "(" Type ")"
   15              | ID

   16 Tables: ε
   17       | "%tables" ID

   18 Rules: Rule
   19      | Rules ";" Rule

   20 Rule: LHS "=" RHS

   21 OptSemicolon: ε
   22             | ";"

   23 LHS: ID ":" Type
   24    | ID

   25 RHS: Production
   26    | Production "|" RHS

   27 Production: NamedFields Action Precedence

   28 NamedFields: "%empty"
   29            | NamedField
   30            | NamedField NamedFields

   31 NamedField: ID
   32           | ID ":" ID

   33 Action: ε
   34       | CODE

   35 Precedence: ε
   36           | "%prec" ID

   37 Type: ID
   38     | ID "[" Types "]"
   39     | "(" Types ")"
   40     | "(" ")"

   41 Types: Type
   42      | Type "," Types


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 2 13 14 15 17 23 24 31 32 36 37 38
    NUM (259)
    CODE (260) 4 34
    COMMENT (261)
    LEXICALERROR (262)
    "[" (263) 38
    "]" (264) 38
    ";" (265) 19 22
    "=" (266) 20
    "|" (267) 26
    ":" (268) 13 23 32
    "{" (269)
    "}" (270)
    "(" (271) 14 39 40
    ")" (272) 14 39 40
    "," (273) 42
    NL (274)
    "%path" (275) 2
    "%type" (276)
    "%empty" (277) 3 28
    "%notation" (278) 2
    "%package" (279) 2
    "%token" (280) 10
    "%left" (281) 7
    "%right" (282) 8
    "%non" (283) 9
    "%rules" (284) 2
    "%include" (285) 4
    "%prec" (286) 36
    "%tables" (287) 17


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    command (34)
        on left: 1
        on right: 0
    Notation (35)
        on left: 2
        on right: 1
    OptInclude (36)
        on left: 3 4
        on right: 2
    Tokens (37)
        on left: 5 6
        on right: 2 6
    TokenSpec (38)
        on left: 7 8 9 10
        on right: 6
    TypedTerminals (39)
        on left: 11 12
        on right: 7 8 9 10 12
    TypedTerminal (40)
        on left: 13 14 15
        on right: 11 12
    Tables (41)
        on left: 16 17
        on right: 2
    Rules (42)
        on left: 18 19
        on right: 2 19
    Rule (43)
        on left: 20
        on right: 18 19
    OptSemicolon (44)
        on left: 21 22
        on right: 2
    LHS (45)
        on left: 23 24
        on right: 20
    RHS (46)
        on left: 25 26
        on right: 20 26
    Production (47)
        on left: 27
        on right: 25 26
    NamedFields (48)
        on left: 28 29 30
        on right: 27 30
    NamedField (49)
        on left: 31 32
        on right: 29 30
    Action (50)
        on left: 33 34
        on right: 27
    Precedence (51)
        on left: 35 36
        on right: 27
    Type (52)
        on left: 37 38 39 40
        on right: 13 14 23 41 42
    Types (53)
        on left: 41 42
        on right: 38 39 42


State 0

    0 $accept: • command $end

    "%notation"  shift, and go to state 1

    command   go to state 2
    Notation  go to state 3


State 1

    2 Notation: "%notation" • ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    ID  shift, and go to state 4


State 2

    0 $accept: command • $end

    $end  shift, and go to state 5


State 3

    1 command: Notation •

    $default  reduce using rule 1 (command)


State 4

    2 Notation: "%notation" ID • "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    "%package"  shift, and go to state 6


State 5

    0 $accept: command $end •

    $default  accept


State 6

    2 Notation: "%notation" ID "%package" • ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    ID  shift, and go to state 7


State 7

    2 Notation: "%notation" ID "%package" ID • "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    "%path"  shift, and go to state 8


State 8

    2 Notation: "%notation" ID "%package" ID "%path" • ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    ID  shift, and go to state 9


State 9

    2 Notation: "%notation" ID "%package" ID "%path" ID • Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    "%tables"  shift, and go to state 10

    $default  reduce using rule 16 (Tables)

    Tables  go to state 11


State 10

   17 Tables: "%tables" • ID

    ID  shift, and go to state 12


State 11

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables • OptInclude Tokens "%rules" OptInclude Rules OptSemicolon

    "%empty"  shift, and go to state 13
    "%include"  shift, and go to state 14

    OptInclude  go to state 15


State 12

   17 Tables: "%tables" ID •

    $default  reduce using rule 17 (Tables)


State 13

    3 OptInclude: "%empty" •

    $default  reduce using rule 3 (OptInclude)


State 14

    4 OptInclude: "%include" • CODE

    CODE  shift, and go to state 16


State 15

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude • Tokens "%rules" OptInclude Rules OptSemicolon

    "%token"  shift, and go to state 17
    "%left"  shift, and go to state 18
    "%right"  shift, and go to state 19
    "%non"  shift, and go to state 20

    $default  reduce using rule 5 (Tokens)

    Tokens     go to state 21
    TokenSpec  go to state 22


State 16

    4 OptInclude: "%include" CODE •

    $default  reduce using rule 4 (OptInclude)


State 17

   10 TokenSpec: "%token" • TypedTerminals

    ID  shift, and go to state 23

    TypedTerminals  go to state 24
    TypedTerminal   go to state 25


State 18

    7 TokenSpec: "%left" • TypedTerminals

    ID  shift, and go to state 23

    TypedTerminals  go to state 26
    TypedTerminal   go to state 25


State 19

    8 TokenSpec: "%right" • TypedTerminals

    ID  shift, and go to state 23

    TypedTerminals  go to state 27
    TypedTerminal   go to state 25


State 20

    9 TokenSpec: "%non" • TypedTerminals

    ID  shift, and go to state 23

    TypedTerminals  go to state 28
    TypedTerminal   go to state 25


State 21

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens • "%rules" OptInclude Rules OptSemicolon

    "%rules"  shift, and go to state 29


State 22

    6 Tokens: TokenSpec • Tokens

    "%token"  shift, and go to state 17
    "%left"  shift, and go to state 18
    "%right"  shift, and go to state 19
    "%non"  shift, and go to state 20

    $default  reduce using rule 5 (Tokens)

    Tokens     go to state 30
    TokenSpec  go to state 22


State 23

   13 TypedTerminal: ID • ":" Type
   14              | ID • "(" Type ")"
   15              | ID •

    ":"  shift, and go to state 31
    "("  shift, and go to state 32

    $default  reduce using rule 15 (TypedTerminal)


State 24

   10 TokenSpec: "%token" TypedTerminals •

    $default  reduce using rule 10 (TokenSpec)


State 25

   11 TypedTerminals: TypedTerminal •
   12               | TypedTerminal • TypedTerminals

    ID  shift, and go to state 23

    $default  reduce using rule 11 (TypedTerminals)

    TypedTerminals  go to state 33
    TypedTerminal   go to state 25


State 26

    7 TokenSpec: "%left" TypedTerminals •

    $default  reduce using rule 7 (TokenSpec)


State 27

    8 TokenSpec: "%right" TypedTerminals •

    $default  reduce using rule 8 (TokenSpec)


State 28

    9 TokenSpec: "%non" TypedTerminals •

    $default  reduce using rule 9 (TokenSpec)


State 29

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" • OptInclude Rules OptSemicolon

    "%empty"  shift, and go to state 13
    "%include"  shift, and go to state 14

    OptInclude  go to state 34


State 30

    6 Tokens: TokenSpec Tokens •

    $default  reduce using rule 6 (Tokens)


State 31

   13 TypedTerminal: ID ":" • Type

    ID      shift, and go to state 35
    "("  shift, and go to state 36

    Type  go to state 37


State 32

   14 TypedTerminal: ID "(" • Type ")"

    ID      shift, and go to state 35
    "("  shift, and go to state 36

    Type  go to state 38


State 33

   12 TypedTerminals: TypedTerminal TypedTerminals •

    $default  reduce using rule 12 (TypedTerminals)


State 34

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude • Rules OptSemicolon

    ID  shift, and go to state 39

    Rules  go to state 40
    Rule   go to state 41
    LHS    go to state 42


State 35

   37 Type: ID •
   38     | ID • "[" Types "]"

    "["  shift, and go to state 43

    $default  reduce using rule 37 (Type)


State 36

   39 Type: "(" • Types ")"
   40     | "(" • ")"

    ID      shift, and go to state 35
    "("  shift, and go to state 36
    ")"  shift, and go to state 44

    Type   go to state 45
    Types  go to state 46


State 37

   13 TypedTerminal: ID ":" Type •

    $default  reduce using rule 13 (TypedTerminal)


State 38

   14 TypedTerminal: ID "(" Type • ")"

    ")"  shift, and go to state 47


State 39

   23 LHS: ID • ":" Type
   24    | ID •

    ":"  shift, and go to state 48

    $default  reduce using rule 24 (LHS)


State 40

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules • OptSemicolon
   19 Rules: Rules • ";" Rule

    ";"  shift, and go to state 49

    $default  reduce using rule 21 (OptSemicolon)

    OptSemicolon  go to state 50


State 41

   18 Rules: Rule •

    $default  reduce using rule 18 (Rules)


State 42

   20 Rule: LHS • "=" RHS

    "="  shift, and go to state 51


State 43

   38 Type: ID "[" • Types "]"

    ID      shift, and go to state 35
    "("  shift, and go to state 36

    Type   go to state 45
    Types  go to state 52


State 44

   40 Type: "(" ")" •

    $default  reduce using rule 40 (Type)


State 45

   41 Types: Type •
   42      | Type • "," Types

    ","  shift, and go to state 53

    $default  reduce using rule 41 (Types)


State 46

   39 Type: "(" Types • ")"

    ")"  shift, and go to state 54


State 47

   14 TypedTerminal: ID "(" Type ")" •

    $default  reduce using rule 14 (TypedTerminal)


State 48

   23 LHS: ID ":" • Type

    ID      shift, and go to state 35
    "("  shift, and go to state 36

    Type  go to state 55


State 49

   19 Rules: Rules ";" • Rule
   22 OptSemicolon: ";" •

    ID  shift, and go to state 39

    $default  reduce using rule 22 (OptSemicolon)

    Rule  go to state 56
    LHS   go to state 42


State 50

    2 Notation: "%notation" ID "%package" ID "%path" ID Tables OptInclude Tokens "%rules" OptInclude Rules OptSemicolon •

    $default  reduce using rule 2 (Notation)


State 51

   20 Rule: LHS "=" • RHS

    ID      shift, and go to state 57
    "%empty"  shift, and go to state 58

    RHS          go to state 59
    Production   go to state 60
    NamedFields  go to state 61
    NamedField   go to state 62


State 52

   38 Type: ID "[" Types • "]"

    "]"  shift, and go to state 63


State 53

   42 Types: Type "," • Types

    ID      shift, and go to state 35
    "("  shift, and go to state 36

    Type   go to state 45
    Types  go to state 64


State 54

   39 Type: "(" Types ")" •

    $default  reduce using rule 39 (Type)


State 55

   23 LHS: ID ":" Type •

    $default  reduce using rule 23 (LHS)


State 56

   19 Rules: Rules ";" Rule •

    $default  reduce using rule 19 (Rules)


State 57

   31 NamedField: ID •
   32           | ID • ":" ID

    ":"  shift, and go to state 65

    $default  reduce using rule 31 (NamedField)


State 58

   28 NamedFields: "%empty" •

    $default  reduce using rule 28 (NamedFields)


State 59

   20 Rule: LHS "=" RHS •

    $default  reduce using rule 20 (Rule)


State 60

   25 RHS: Production •
   26    | Production • "|" RHS

    "|"  shift, and go to state 66

    $default  reduce using rule 25 (RHS)


State 61

   27 Production: NamedFields • Action Precedence

    CODE  shift, and go to state 67

    $default  reduce using rule 33 (Action)

    Action  go to state 68


State 62

   29 NamedFields: NamedField •
   30            | NamedField • NamedFields

    ID      shift, and go to state 57
    "%empty"  shift, and go to state 58

    $default  reduce using rule 29 (NamedFields)

    NamedFields  go to state 69
    NamedField   go to state 62


State 63

   38 Type: ID "[" Types "]" •

    $default  reduce using rule 38 (Type)


State 64

   42 Types: Type "," Types •

    $default  reduce using rule 42 (Types)


State 65

   32 NamedField: ID ":" • ID

    ID  shift, and go to state 70


State 66

   26 RHS: Production "|" • RHS

    ID      shift, and go to state 57
    "%empty"  shift, and go to state 58

    RHS          go to state 71
    Production   go to state 60
    NamedFields  go to state 61
    NamedField   go to state 62


State 67

   34 Action: CODE •

    $default  reduce using rule 34 (Action)


State 68

   27 Production: NamedFields Action • Precedence

    "%prec"  shift, and go to state 72

    $default  reduce using rule 35 (Precedence)

    Precedence  go to state 73


State 69

   30 NamedFields: NamedField NamedFields •

    $default  reduce using rule 30 (NamedFields)


State 70

   32 NamedField: ID ":" ID •

    $default  reduce using rule 32 (NamedField)


State 71

   26 RHS: Production "|" RHS •

    $default  reduce using rule 26 (RHS)


State 72

   36 Precedence: "%prec" • ID

    ID  shift, and go to state 74


State 73

   27 Production: NamedFields Action Precedence •

    $default  reduce using rule 27 (Production)


State 74

   36 Precedence: "%prec" ID •

    $default  reduce using rule 36 (Precedence)
